Fix value in sudoku board cell not being aligned correctly, as well as having poor size adjustments.

--- a/static/sudokugame/css/board.css
+++ b/static/sudokugame/css/board.css
@@ -60,14 +60,10 @@
 }
 
 .cell-value {
-    display: inline-block;
-    position: absolute;
-    color: darkslategray;
-    text-align: center;
-    top: 0;
-    left: 0;
-    margin: auto;
-    font-size: 2.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
     width: 100%;
     height: 100%;
 }
